--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "license": "MIT",
   "dependencies": {
     "bindings": "~1.0.0",
-    "nan": "*"
+    "nan": "~2.10.0"
   },
   "devDependencies": {
-    "mocha": "~1.8.1",
+    "mocha": "^5.2.0",
     "should": "~1.2.2",
     "sinon": "~1.6.0"
   }
